--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "cross-fetch": "^3.1.4",
     "dotenv": "^10.0.0",
+    "form-data": "^4.0.0",
     "promise-mysql": "^5.0.3",
-    "prompt-sync": "^4.2.0"
+    "prompt-sync": "^4.2.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.15.0",
