moved folder config to .env

--- a/env.sample
+++ b/env.sample
@@ -2,3 +2,6 @@ api_key=blt8...........c2
 base_url=https://eu-api.contentstack.com/v3
 email=janedoe@parkholidays.com
 management_token=cs.....................131
+Park_Logo=blt18b9dda7e8f2f856
+Location_Media=blt44360bd06fddd222
+Accommodation_Media=blt98783ba9c91abbe3
