--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 # Compiled code
 dist/
 
+# env files for different environments
+envs/
+
 # Runtime data
 pids
 *.pid
