--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx webpack --mode=development",
-    "migrate": "npm run build && node ./dist/index.js migrate",
-    "remove": "npm run build && node ./dist/index.js remove"
+    "start": "npm run build && node ./dist/index.js"
   },
   "author": "",
   "license": "ISC",
