--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx webpack --mode=development",
+    "types": "npm run build && node ./dist/contentTypes.js",
     "start": "npm run build && node ./dist/index.js"
   },
   "author": "",
@@ -13,6 +14,7 @@
     "cross-fetch": "^3.1.4",
     "dotenv": "^10.0.0",
     "form-data": "^4.0.0",
+    "pluralize": "^8.0.0",
     "promise-mysql": "^5.0.3",
     "prompt-sync": "^4.2.0",
     "request": "^2.88.2"
