publishing with refernces now availabile

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "npx webpack --mode=development",
     "migrateV2": "npm run build && node ./dist/migrateV2.js parkholidays",
+    "publish": "npm run build && node ./dist/publish.js",
     "types": "npm run build && node ./dist/contentTypes.js",
     "start": "npm run build && node ./dist/index.js"
   },
