--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "build": "npx webpack --mode=development",
     "migrateSlugs": "npm run build && node ./dist/migrateSlugs.js parkholidays",
     "publish": "npm run build && node ./dist/publish.js",
+    "dynamo": "npm run build && node ./dist/dynamo.js",
     "types": "npm run build && node ./dist/contentTypes.js",
     "start": "npm run build && node ./dist/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1055.0",
     "cross-fetch": "^3.1.4",
     "dotenv": "^10.0.0",
     "form-data": "^4.0.0",
