--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.16.10",
     "aws-sdk": "^2.1055.0",
     "cross-fetch": "^3.1.4",
     "dotenv": "^10.0.0",
