--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npx webpack --mode=development",
     "migrateSlugs": "npm run build && node ./dist/migrateSlugs.js parkholidays",
-    "migrateAdditionalStockImages": "npm run build && node ./dist/migrateAdditionalStockImages.js playground",
+    "migrateAdditionalStockImages": "npm run build && node ./dist/migrateAdditionalStockImages.js parkholidays",
     "publish": "npm run build && node ./dist/publish.js",
     "dynamo": "npm run build && node ./dist/dynamo.js",
     "types": "npm run build && node ./dist/contentTypes.js",
