--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "npx webpack --mode=development",
     "migrateSlugs": "npm run build && node ./dist/migrateSlugs.js parkholidays",
     "migrateAdditionalStockImages": "npm run build && node ./dist/migrateAdditionalStockImages.js parkholidays",
+    "migrateStockDefaultAddons": "npm run build && node ./dist/migratedStockDefaultAddons.js parkholidays",
     "publish": "npm run build && node ./dist/publish.js",
     "dynamo": "npm run build && node ./dist/dynamo.js",
     "types": "npm run build && node ./dist/contentTypes.js",
