added companyBrand to contentstack

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "npx webpack --mode=development",
     "migrateSlugs": "npm run build && node ./dist/migrateSlugs.js parkholidays",
-    "migrateAdditionalStockImages": "npm run build && node ./dist/migrateAdditionalStockImages.js parkholidays",
-    "migrateStockDefaultAddons": "npm run build && node ./dist/migratedStockDefaultAddons.js parkholidays",
+    "migrateCmsTags": "npm run build && node ./dist/migrateCmsTags.js parkholidays",
+    "migrateCompanyBrand": "npm run build && node ./dist/migrateCompanyBrand.js parkholidays",
     "publish": "npm run build && node ./dist/publish.js",
     "dynamo": "npm run build && node ./dist/dynamo.js",
     "types": "npm run build && node ./dist/contentTypes.js",
