--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "migrateCmsTags": "npm run build && node ./dist/migrateCmsTags.js parkholidays",
     "migrateCompanyBrand": "npm run build && node ./dist/migrateCompanyBrand.js parkholidays",
     "migrateIsVisible": "npm run build && node ./dist/migrateIsVisible.js parkholidays",
+    "migrateTouringType": "npm run build && node ./dist/migrateTouringType.js playground",
     "migrateMediaTextContent": "npm run build && node ./dist/migrateMediaTextContent.js parkholidays",
     "publish": "npm run build && node ./dist/publish.js",
     "dynamo": "npm run build && node ./dist/dynamo.js",
