accommodation images/amenities replaced after hujscraper removed them

--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx webpack --mode=development",
-    "migrateSlugs": "npm run build && node ./dist/migrateSlugs.js parkholidays",
-    "migrateCmsTags": "npm run build && node ./dist/migrateCmsTags.js parkholidays",
-    "migrateCompanyBrand": "npm run build && node ./dist/migrateCompanyBrand.js parkholidays",
+    "migrateAccommAmenities": "npm run build && node ./dist/migrateAccommAmenities.js parkholidays",
     "publish": "npm run build && node ./dist/publish.js",
     "dynamo": "npm run build && node ./dist/dynamo.js",
     "types": "npm run build && node ./dist/contentTypes.js",
