--- a/package.json
+++ b/package.json
@@ -5,12 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "npx webpack --mode=development",
-    "migrateSlugs": "npm run build && node ./dist/migrateSlugs.js parkholidays",
-    "migrateCmsTags": "npm run build && node ./dist/migrateCmsTags.js parkholidays",
-    "migrateCompanyBrand": "npm run build && node ./dist/migrateCompanyBrand.js parkholidays",
-    "migrateIsVisible": "npm run build && node ./dist/migrateIsVisible.js parkholidays",
-    "migrateTouringType": "npm run build && node ./dist/migrateTouringType.js playground",
     "migrateMediaTextContent": "npm run build && node ./dist/migrateMediaTextContent.js parkholidays",
+    "migrateAccommodationIdsToDynamoDB": "npm run build && node ./dist/migrateAccommodationIdsToDynamoDB.js parkholidays",
     "publish": "npm run build && node ./dist/publish.js",
     "dynamo": "npm run build && node ./dist/dynamo.js",
     "types": "npm run build && node ./dist/contentTypes.js",
