--- a/package.json
+++ b/package.json
@@ -6,11 +6,6 @@
   "scripts": {
     "build": "npx webpack --mode=development",
     "migrateSlugs": "npm run build && node ./dist/migrateSlugs.js parkholidays",
-    "migrateTradeSales": "npm run build && node ./dist/migrateTradeSales.js tradesales",
-    "migrateCompanyBrand": "npm run build && node ./dist/migrateCompanyBrand.js parkholidays",
-    "migrateIsVisible": "npm run build && node ./dist/migrateIsVisible.js parkholidays",
-    "migrateTouringType": "npm run build && node ./dist/migrateTouringType.js playground",
-    "migrateMediaTextContent": "npm run build && node ./dist/migrateMediaTextContent.js parkholidays",
     "publish": "npm run build && node ./dist/publish.js",
     "dynamo": "npm run build && node ./dist/dynamo.js",
     "types": "npm run build && node ./dist/contentTypes.js",
@@ -21,6 +16,7 @@
   "dependencies": {
     "@babel/core": "^7.16.10",
     "aws-sdk": "^2.1055.0",
+    "contentstack": "^3.15.4",
     "cross-fetch": "^3.1.4",
     "dotenv": "^10.0.0",
     "form-data": "^4.0.0",
