--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.16.10",
+    "@contentstack/json-rte-serializer": "^2.0.1",
     "aws-sdk": "^2.1055.0",
     "contentstack": "^3.15.4",
     "cross-fetch": "^3.1.4",
     "dotenv": "^10.0.0",
     "form-data": "^4.0.0",
+    "jsdom": "^21.1.0",
     "pluralize": "^8.0.0",
     "promise-mysql": "^5.0.3",
     "prompt-sync": "^4.2.0",
