localAttractions stuff to fix county=null

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx webpack --mode=development",
+    "migrateLocalAttraction": "npm run build && node ./dist/migrateLocalAttraction.js parkleisure",
     "migrateLongDescription": "npm run build && node ./dist/migrateLongDescription.js parkholidays",
     "publish": "npm run build && node ./dist/publish.js",
     "dynamo": "npm run build && node ./dist/dynamo.js",
